--- a/MobileApp/OpportunityFund/app/src/main/res/values/strings.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/values/strings.xml
@@ -3,4 +3,19 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+
+    <string name="drawer_open"></string>
+    <string name="drawer_close"></string>
+
+    <string name="ok">Ok</string>
+
+    <string name="hint_name">Full Name</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="btn_sign_up">Sign Up</string>
+    <string name="err_msg_name">Enter your full name</string>
+    <string name="err_msg_email">Enter valid email address</string>
+    <string name="err_msg_password">Enter the password</string>
+    <string name="title_activity_opportunity_fund_base">OpportunityFundBaseActivity</string>
+
 </resources>
