Fixed a few bugs

--- a/MobileApp/OpportunityFund/app/src/main/res/values/strings.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
     <string name="btn_sign_up">Sign Up</string>
+    <string name="calculate">Calculate</string>
     <string name="err_msg_name">Enter your full name</string>
     <string name="err_msg_email">Enter valid email address</string>
     <string name="err_msg_password">Enter the password</string>
